Fixed alignment issue on the about page

--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -7,46 +7,48 @@
 }
 
 .parent {
+	padding: 0 30px;
+}
+
+.table {
 	max-width: 1100px;
 	margin: 0 auto;
 	padding: 30px 0;
 
 	display: table;
-    table-layout: fixed;
+	table-layout: fixed;
+
+	/*background: pink;*/
 }
 
-.child-left {
+.child-left, .child-right {
 	display:table-cell;
-    vertical-align: middle;
-    float: none;
-}
-
-.child-left img {
-	width: 100%;
-	max-height: 100%;
-	max-width: 400px;
-
-	/* Center horizontally */
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.child-right {
-	display: table-cell;
 	vertical-align: middle;
 	float: none;
 }
 
-.profile-description {
-	margin: 0 auto;
+/* Table cells have in built padding. */
+.child-right {
+	padding-right: 0;
+}
+
+.child-left {
+	padding-left: 0;
+}
+
+/* Don't need to horizontally center img in table cell. */
+.child-left img {
+	width: 100%;
+	max-height: 100%;
+	max-width: 400px;
 }
 
 .profile-description p {
+	width: 100%;
 	text-align: justify;
 }
 
-/* Weird behaviour here figure out */
+/* Need a wrapper to center a div horizontally */
 .scuba-description-parent {
 	text-align: center;
 }
@@ -62,10 +64,6 @@
 	text-align: justify;
 }
 
-.scuba-img {
-	text-align: center;
-}
-
 .scuba-img img {
 	width: 100%;
 	height: 100%;
@@ -77,7 +75,7 @@
 	margin: 0 auto;
 }
 
-.hobbies-description-parent {
+/*.hobbies-description-parent {
 	text-align: center;
 }
 
@@ -97,4 +95,4 @@
 
 	display: block;
 	margin: 0 auto;
-}
+}*/
